# sapserver

./: .gitignore  .gitmodules  CMakeLists.txt  addexternal.cmake  sapserver.cbp  version.cmake
discover/include/: handlertofile.h
discover/src/: handlertofile.cpp  main.cpp
include/: handler.h  message.h  parser.h  receiver.h  sap.h  sapdlldefine.h  saphandler.h  sapnamedtype.h  sapparser.h  sapreceiver.h  sapsender.h  sapserver.h  sapserverimpl.h  sender.h
src/: handler.cpp  main.cpp  message.cpp  parser.cpp  receiver.cpp  saphandler.cpp  sapserver.cpp  sapserverimpl.cpp  sender.cpp
